Bump Java version to 17
Builds and API tests pass, but Mockito throws exception at runtime during unit tests.